# pve-spicey-gui

./: .env.sample  .gitignore  .pve_vdi_client.cfg.example  LICENSE.md  README.md  pylintrc  pyproject.toml  requirements.txt
pve_vdi_client/: __init__.py  __main__.py  spiceproxy
pve_vdi_client/vdi_client/: client.py
pve_vdi_client/vdi_gui/: gui.py
tests/vdi_client/: test_client.py
tests/vdi_client/cassettes/: test_client_instantiation_with_invalid_credentials.yaml  test_client_instantiation_with_valid_credentials.yaml
