[project]
name = "pve-vdi-client"
version = "0.0.2"
dependencies = [
    "requests==2.27.1",
    "proxmoxer==1.2.0",
    "PySide2==5.15.2.1",
    "python-decouple==3.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]