[project]
name = "pve-vdi-client"
version = "1.0.0"
dependencies = [
    "requests==2.27.1",
    "proxmoxer==1.2.0",
    # YOU NEED THIS, but requiring it on RPi causes errors.
    #"PySide2==5.15.2.1",
    "python-decouple==3.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]